--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": ">=16.0.0"
